--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Simple Sidebar - Start Bootstrap Template</title>
+    <title> GALERIA VIRTUAL </title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -41,7 +41,7 @@ GALERIA VIRTUAL                    </a>
                     <a href="galeria.php">Galeria</a>
                 </li>
                 <li>
-                    <a href="upload.php">Upload de fotos</a>
+                    <a href="upload_form.php">Upload de fotos</a>
                 </li>
                  <li>
                     <a href="#">Sobre nós</a>
@@ -61,10 +61,10 @@ GALERIA VIRTUAL                    </a>
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1>Simple Sidebar</h1>
+                        <h1>GALERIA VIRTUAL</h1>
                         <p>This template has a responsive menu toggling system. The menu will appear collapsed on smaller screens, and will appear non-collapsed on larger screens. When toggled using the button below, the menu will appear/disappear. On small screens, the page content will be pushed off canvas.</p>
-                        <p>Make sure to keep all page content within the <code>#page-content-wrapper</code>.</p>
-                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
+                        
+                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Menu</a>
                     </div>
                 </div>
             </div>
